$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.16-16 (openen Mar 25, 2009)

	* metaMDS: scale ordination scores to the same max distance as
	input dissimilarities if halfchange = FALSE (not yet documented,
	still experimental).

	* mrpp: reports now "classification strength" when weight.type = 3
	or weights n*(n-1) are used. Returns mean dissimilarities and
	counts for classes. Expected delta is now the mean of original
	dissimilarities instead of mean of permutation deltas.

Version 1.16-15 (closed Mar 25, 2009)

	* envfit help page: explains the automatic scaling and 'arrow.mul'
	argument. 

	* add1/drop1 help: better example after a query of usage in R
	mailing list. 

	* oecosimu & permatswap: much faster 'burnin' implemented through
	'thin', and hence using a single C loop instead of multiple calls
	and assignments to an R object.

	* as.mcmc.permat: provides same functionality for permat objects
	as as.mcmc.oecosimu for oecosimu objects.

	* permatswap: same default values of 'burnin' and 'thin'  (0 and 1,
	respectively) are set for permatswap and oecosimu functions.
	Previous defaults for permatswap were in conflict with oecosimu
	when called by permat.control.

	* hiersimu: new function to evaluate a statistic value at
	different levels of a nested hierarchical sampling design. Based
	on oecosimu and null model testing, but with evaluation process
	similar to adipart.

	* metaMDS: automatic stepacross works with Euclidean, Manhattan
	and other distances with no fixed upper limit.  However, this may
	be meaningless, and a warning is issued. Fixed after a query to
	R-sig-ecology by Manuel Spinola.
	
Version 1.16-14 (closed Mar 10, 2009)

	* as.mcmc.oecosimu: a new function to translate sequential null
	models to "mcmc" object of the coda package. The coda package
	provides a wealthy source of the analysis of things like
	stationarity, adequate sample size, autocorrelation, length of
	needed burnin-in etc.
